--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
     <title>Solar Terminator Layer - Esri JS API</title>
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.9/js/esri/css/esri.css">
+    <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/3.9/js/esri/css/esri.css">
     <link rel="stylesheet" type="text/css" href="css/SolarTerminator.css">
     <style>
       html, body {
@@ -49,7 +49,7 @@
         document.getElementsByTagName("head")[0].appendChild(e);
       };
 
-      injectStylesheet("http://js.arcgis.com/3.11/dijit/themes/claro/claro.css");
+      injectStylesheet("https://js.arcgis.com/3.11/dijit/themes/claro/claro.css");
       injectStylesheet = null;
     </script>
     <script>
@@ -63,7 +63,7 @@
         }]
       };
     </script>
-    <script src="http://js.arcgis.com/3.11"></script>
+    <script src="https://js.arcgis.com/3.11"></script>
     <script>
       require([
         "esri/map",
